# daily_fortune

./: BAILIAN.md  DEPLOY.md  Dockerfile  MCP_DEPLOY_EXPERIENCE.md  MEMORY.md  README.md  docker-compose.yml  pyproject.toml
daily_fortune/: .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
daily_fortune/.workbuddy/memory/: 2026-04-14.md  MEMORY.md
daily_fortune/src/daily_fortune/: __init__.py  fortune.py  server.py  wuxing.py
daily_fortune/tests/: test_fortune.py
src/daily_fortune/: __init__.py  fortune.py  server.py  wuxing.py
tests/: test_fortune.py
